@@ -273,6 +273,13 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   template_permissions_changed      "Your edit permissions for template $id were removed."
   checked_out                       "Template '$file' (ID: $id) is aleady checked out by another user." 
   selected_template_checkout        "The selected templates have been checked out."
+  one_tmpl_stolen_and_opened        "Template $id has been stolen from $victim and opened for edit."
+  one_tmpl_yours_and_opened         "Template $id was already checked out to you; it has been opened for edit."
+  all_selected_tmpl_yours           "The selected Templates were all checked out to you; switching to Workspace view."
+  multiple_tmpl_yours               "Templates $ids were already checked out to you."
+  one_tmpl_yours                    "Template $id was already checked out to you."
+  multiple_tmpl_stolen              "Templates $ids have been stolen (from $victims) and moved to your Workspace."
+  one_tmpl_stolen                   "Template $id has been stolen from $victim and moved to your Workspace."
 </Module>
 
 <Module "Krang::CGI::User">
